--- a/ownwebsite/contact/static/css/styles.css
+++ b/ownwebsite/contact/static/css/styles.css
@@ -1,10 +1,14 @@
 html {
   scroll-behavior: smooth;
+  height:100%;
+  width:100%;
 }
 
 body {
   font-size: 16px;
   font-family: "Open Sans", "Oxygen", sans-serif;
+  height:100%;
+  width:100%;
 }
 
 #logo {
