--- a/ownwebsite/contact/templates/about.html
+++ b/ownwebsite/contact/templates/about.html
@@ -1,8 +1,9 @@
 {% extends 'index.html' %}
+{%load static%}
 {% block content %}
  <section id="about">
     <div class="container">
-      <h2 class="sub-headers">About</h2>
+      <div class="profileimg"><img src="{% static 'images/pp.jpeg' %}" alt="" /></div>
       <div class="about-content">
         <h4>Hey! I'm Suraj Raj Karingala.</h4>
         I'm an undergrad from IIT Guwahati and will be Graduating in 2022,with
