--- a/ownwebsite/contact/static/css/styles.css
+++ b/ownwebsite/contact/static/css/styles.css
@@ -135,9 +135,23 @@ body {
   padding-bottom: 20px;
 }
 
+.profileimg img{
+    height: 200px;
+    width: 200px;
+    border-radius: 10px;
+     border-top-left-radius: 50% 50%;
+  border-top-right-radius: 50% 50%;
+   border-bottom-right-radius: 50% 50%;
+  border-bottom-left-radius: 50% 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #about {
   padding-top: 50px;
   padding-bottom: 50px;
+
 }
 
 #about .btn {
