--- a/ownwebsite/contact/templates/index.html
+++ b/ownwebsite/contact/templates/index.html
@@ -7,7 +7,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>website_index</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   <link rel="stylesheet" href="{% static 'css/animate.css' %}" />
@@ -24,13 +27,14 @@
 <body>
 <section id="nav-bar">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <div id="logo" alt="">Suraj</div>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
@@ -60,8 +64,8 @@
   </section>
 {% block content%}
 {% endblock %}
-<script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
-  <script src="{% static 'js/bootstap.min.css' %}"></script>
+
+
   <script src="{% static 'js/script.js' %}"></script>
   <script src="{% static 'js/animation.js' %}"></script>
 </body>
