--- a/ownwebsite/contact/templates/home.html
+++ b/ownwebsite/contact/templates/home.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div class="buttond"><<button type="button">Download CV</button></div>
+  <div class="buttond"><a style="color:white; " href="https://drive.google.com/file/d/1uuXUGQr4SsqYeNnse1c_reEP5uRREO0F/view?usp=sharing"><button type="button">Download CV</button></a></div>
     <div id="godown" class="dance">
       <button type="button">
         <a href="{% url 'about'%}"><i class="fas fa-angle-double-down" style="color: #efefef;"></i></a>
