--- a/ownwebsite/contact/templates/index.html
+++ b/ownwebsite/contact/templates/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link" href="{% url 'interests'%}">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'resume'%}">Resume</a>
+            <a class="nav-link" href="https://drive.google.com/file/d/1uuXUGQr4SsqYeNnse1c_reEP5uRREO0F/view?usp=sharing">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'contact'%}">Contact</a>
