--- a/ownwebsite/contact/templates/about.html
+++ b/ownwebsite/contact/templates/about.html
@@ -25,31 +25,22 @@
       key abilities.
       <div class="row">
         <div class="col-md-6 skills-bar">
-          <p>Web Development</p>
+          <p>Full Stack Web Development</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 75%;">75%</div>
+            <div class="progress-bar" style="width: 75%;">85%</div>
           </div>
           <p>Data Science</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 80%;">80%</div>
+            <div class="progress-bar" style="width: 80%;">60%</div>
           </div>
-          <p>Machine learning</p>
-          <div class="progress">
-            <div class="progress-bar" style="width: 30%;">30%</div>
-          </div>
-        </div>
         <div class="col-md-6 skills-bar">
-          <p>App Development</p>
+          <p>Android App Development</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 30%;">30%</div>
+            <div class="progress-bar" style="width: 30%;">80%</div>
           </div>
-          <p>Oratory</p>
+          <p>Machine Learning</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 80%;">80%</div>
-          </div>
-          <p>Cooking</p>
-          <div class="progress">
-            <div class="progress-bar" style="width: 50%;">50%</div>
+            <div class="progress-bar" style="width: 80%;">30%</div>
           </div>
         </div>
       </div>
