--- a/ownwebsite/contact/templates/about.html
+++ b/ownwebsite/contact/templates/about.html
@@ -27,20 +27,21 @@
         <div class="col-md-6 skills-bar">
           <p>Full Stack Web Development</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 75%;">85%</div>
+            <div class="progress-bar" style="width: 85%;">85%</div>
           </div>
           <p>Data Science</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 80%;">60%</div>
+            <div class="progress-bar" style="width: 60%;">60%</div>
           </div>
+        </div>
         <div class="col-md-6 skills-bar">
           <p>Android App Development</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 30%;">80%</div>
+            <div class="progress-bar" style="width: 80%;">80%</div>
           </div>
           <p>Machine Learning</p>
           <div class="progress">
-            <div class="progress-bar" style="width: 80%;">30%</div>
+            <div class="progress-bar" style="width: 30%;">30%</div>
           </div>
         </div>
       </div>
