--- a/ownwebsite/contact/templates/education.html
+++ b/ownwebsite/contact/templates/education.html
@@ -6,31 +6,79 @@
 {% block content %}
 <section id="education">
     <div class="container">
-      <h2 class="sub-headers">My Education</h2>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="ei-logos">
-            <a href=""><img src="{% static 'images/stm.jpg' %}" alt="" /></a>
-          </div>
-          <div class="ei-content">Primary Schooling</div>
-        </div>
-        <div class="col-md-3">
-          <div class="ei-logos">
-            <a href=""><img src="{% static 'images/sa.jpg' %}" alt="" /></a>
-          </div>
-          <div class="ei-content">Secondary Schooling</div>
-        </div>
-        <div class="col-md-3">
-          <div class="ei-logos">
-            <a href=""><img src="{% static 'images/fiitjee.jpg' %}" alt="" /></a>
-          </div>
-          <div class="ei-content">JEE Coaching</div>
-        </div>
-        <div class="col-md-3">
+      <h2 class="sub-headers" style="padding-bottom:40px;">My Education</h2>
+      <div class="card-deck mb-5">
+        <div class="col-8" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row">
+                  <div class="col-4">
           <div class="ei-logos">
             <a href=""><img src="{% static 'images/iitg.jpg' %}" alt="" /></a>
           </div>
-          <div class="ei-content">Bachelor's degree</div>
+                  </div>
+                  <div class="col-8">
+          <div class="ei-content">Bachelor's Degree</div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        </div>
+      </div>
+      <div class="card-deck mb-5">
+        <div class="col-4"></div>
+        <div class="col-8" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row">
+                  <div class="col-4">
+          <div class="ei-logos">
+            <a href=""><img src="{% static 'images/fiitjee.jpg' %}" alt="" /></a>
+          </div>
+                  </div>
+                  <div class="col-8">
+          <div class="ei-content">JEE Preparation</div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        </div>
+      </div>
+      <div class="card-deck mb-5">
+        <div class="col-8" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row">
+                  <div class="col-4">
+          <div class="ei-logos">
+            <a href=""><img src="{% static 'images/sa.jpg' %}" alt="" /></a>
+          </div>
+                  </div>
+                  <div class="col-8">
+          <div class="ei-content">Secondary Schooling</div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        </div>
+      </div>
+      <div class="card-deck mb-5">
+        <div class="col-4"></div>
+        <div class="col-8" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row">
+                  <div class="col-4">
+          <div class="ei-logos">
+            <a href=""><img src="{% static 'images/stm.jpg' %}" alt="" /></a>
+          </div>
+                  </div>
+                  <div class="col-8">
+          <div class="ei-content">Primary Schooling</div>
+                  </div>
+                </div>
+              </div>
+        </div>
         </div>
       </div>
     </div>
