--- a/ownwebsite/contact/templates/work.html
+++ b/ownwebsite/contact/templates/work.html
@@ -6,31 +6,65 @@
 {% block content %}
 <section id="work">
     <div class="container">
-      <h2 class="sub-headers">Work</h2>
-      <div class="row">
-        <div class="col-md-4">
+      <h2 class="sub-headers " style="padding-bottom:40px;">Work</h2>
+      <div class="card-deck mb-5">
+        <div class="col-12" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row" >
+                <div class="col-4">
           <div class="wi-logos">
             <a href=""><img src="{% static 'images/sail.jpg' %}" alt="" /></a>
           </div>
+                </div>
+                <div class="col-8" style="padding:60px 10px 10px 10px; ">
           <div class="wi-c-header">Executive</div>
           <div class="wi-c">Was part of an amazing team, which is a link between Alumni and the Student Community. Increased links with alumni, hosted
            The Alumni Meet, held Alumni talks and various other events. </div>
+                </div>
+                </div>
+              </div>
         </div>
-        <div class="col-md-4">
+        </div>
+      </div>
+      <div class="card-deck mb-5">
+        <div class="col-12" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row">
+                <div class="col-4">
           <div class="wi-logos">
             <a href=""><img src="{% static 'images/cepstrum.png' %}" alt="" /></a>
           </div>
+                </div>
+                  <div class="col-8" style="padding:60px 10px 10px 10px;">
           <div class="wi-c-header">Core Team Member</div>
           <div class="wi-c">The Student Body of EEE&ECE Department. Successfully addressed the concerns of the students of
             the department. Held Intern/Placement talks, Fresher's Party and Farewell.</div>
         </div>
-        <div class="col-md-4">
+              </div>
+              </div>
+        </div>
+      </div>
+      </div>
+        <div class="card-deck mb-5">
+        <div class="col-12" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row">
+                <div class="col-4">
           <div class="wi-logos-t">
             <a href=""><img src="{% static 'images/technothlon.png' %}" alt="" /></a>
           </div>
+                </div>
+                  <div class="col-8" style="padding:60px 10px 10px 40px;">
           <div class="wi-c-header">Hyderabad City Representative</div>
           <div class="wi-c">Technothlon-The Annual school Championship of Techniche. Successfully  gave presentations in various schools, motivated students
             and conducted the examination.</div>
+                  </div>
+                </div>
+              </div>
+        </div>
         </div>
       </div>
     </div>
