--- a/ownwebsite/contact/templates/contact.html
+++ b/ownwebsite/contact/templates/contact.html
@@ -43,7 +43,7 @@
                           {{ field }}
                       </div>
                     {% endfor %}
-                            <button class="btn btn-default" type="submit">
+                            <button class="btn btn-default" type="submit" style="background-color:aqua;">
                                    Send Message
                             </button>
                         </form>
@@ -69,17 +69,17 @@
                     </div>
                     <h2>Find me here!</h2>
                     <div class="row">
-                        <div class="col-md-3">
-                            <a href="http://www.linkedin.com/in/SurajRajKaringala"><i class="fa-2x fa fa-linkedin"></i></a>
+                        <div class="col-md-3 lol">
+                            <a href="http://www.linkedin.com/in/SurajRajKaringala"><i class="fa-2x fa fa-linkedin" style="color:aqua;"></i></a>
                         </div>
                         <div class="col-md-3">
-                            <a href="http://www.facebook.com/SurajRajKaringala"><i class="fa fa-2x fa-facebook"></i></a>
+                            <a href="http://www.facebook.com/SurajRajKaringala"><i class="fa fa-2x fa-facebook" style="color:aqua;"></i></a>
                         </div>
                         <div class="col-md-3">
-                            <a href="http://www.github.com/Suraj3579"><i class="fa fa-2x fa-github"></i></a>
+                            <a href="http://www.github.com/Suraj3579"><i class="fa fa-2x fa-github" style="color:aqua;"></i></a>
                         </div>
                         <div class="col-md-3">
-                            <a href="https://goo.gl/maps/ogDjtNWFgrsUrUt67"><i class="fas fa-2x fa-map-marker-alt"></i></a>
+                            <a href="https://goo.gl/maps/ogDjtNWFgrsUrUt67"><i class="fas fa-2x fa-map-marker-alt" style="color:aqua;"></i></a>
                         </div>
                     </div>
             </div>
