--- a/ownwebsite/contact/templates/education.html
+++ b/ownwebsite/contact/templates/education.html
@@ -17,8 +17,10 @@
             <a href=""><img src="{% static 'images/iitg.jpg' %}" alt="" /></a>
           </div>
                   </div>
-                  <div class="col-8">
-          <div class="ei-content">Bachelor's Degree</div>
+                  <div class="col-8" style="padding:40px;">
+          <div class="wi-c-header">Indian Institute Of Technology, Guwahati</div>
+          <div class="wi-c">2018-2022 </div>
+                      <div class="wi-c">Currently,I am a Pre-Final Yearite at IITG </div>
                   </div>
                 </div>
               </div>
@@ -36,8 +38,14 @@
             <a href=""><img src="{% static 'images/fiitjee.jpg' %}" alt="" /></a>
           </div>
                   </div>
-                  <div class="col-8">
-          <div class="ei-content">JEE Preparation</div>
+                  <div class="col-8" style="padding:40px;">
+          <div class="wi-c-header">FIITJEE CM Campus, Madhapur</div>
+                      <div class="wi-c">JEE Preparation</div>
+                      <div class="wi-c">2016-2018 </div>
+                      <div class="wi-c-header">FIITJEE World School, AOC Center & saifabad</div>
+                      <div class="wi-c">Class 8 to 10</div>
+                      <div class="wi-c">2013-2016 </div>
+
                   </div>
                 </div>
               </div>
@@ -54,8 +62,10 @@
             <a href=""><img src="{% static 'images/sa.jpg' %}" alt="" /></a>
           </div>
                   </div>
-                  <div class="col-8">
-          <div class="ei-content">Secondary Schooling</div>
+                  <div class="col-8" style="padding:40px;">
+          <div class="wi-c-header">Suchitra Academy</div>
+                      <div class="wi-c">Class 6 & 7</div>
+                      <div class="wi-c">2011-2013 </div>
                   </div>
                 </div>
               </div>
@@ -73,8 +83,10 @@
             <a href=""><img src="{% static 'images/stm.jpg' %}" alt="" /></a>
           </div>
                   </div>
-                  <div class="col-8">
-          <div class="ei-content">Primary Schooling</div>
+                  <div class="col-8" style="padding:40px;">
+          <div class="wi-c-header">St. Martin's High School</div>
+                      <div class="wi-c">Primary Education</div>
+                      <div class="wi-c">2003-2011 </div>
                   </div>
                 </div>
               </div>
