--- a/ownwebsite/contact/templates/home.html
+++ b/ownwebsite/contact/templates/home.html
@@ -28,8 +28,8 @@
       <h1>
         I Am
 
-        <span class="txt-rotate keywords" data-period="2000"
-          data-rotate='[ "Suraj Raj.", "A Developer.", "A Data Scientist.", "A Fitness Freak.", "So Awesome!" ]'></span>
+        <span class="txt-rotate keywords" data-period="500"
+          data-rotate='[ "Suraj Raj.", "A Developer.", "A Pre-Final Yearite @IITG.", "A Fitness Freak.", "So Awesome!" ]'></span>
       </h1>
     </div>
     <div class="container wow bounce animated" data-wow-delay="1s">
