--- a/ownwebsite/contact/templates/work.html
+++ b/ownwebsite/contact/templates/work.html
@@ -14,6 +14,26 @@
                 <div class="row" >
                 <div class="col-4">
           <div class="wi-logos">
+            <a href=""><img src="{% static 'images/oracle_logo.png' %}" alt="" /></a>
+          </div>
+                </div>
+                <div class="col-8" style="padding:60px 10px 10px 10px; ">
+          <div class="wi-c-header">Software Development Internship</div>
+                    <div class="wi-c">Summer 2021</div>
+          <div class="wi-c">Upcoming </div>
+                </div>
+                </div>
+              </div>
+        </div>
+        </div>
+      </div>
+      <div class="card-deck mb-5">
+        <div class="col-12" >
+            <div class="card h-100 border-info mb-3">
+              <div class="container">
+                <div class="row" >
+                <div class="col-4">
+          <div class="wi-logos">
             <a href=""><img src="{% static 'images/sail.jpg' %}" alt="" /></a>
           </div>
                 </div>
