--- a/ownwebsite/contact/static/css/styles.css
+++ b/ownwebsite/contact/static/css/styles.css
@@ -451,6 +451,11 @@ body {
 .flip-box-back a:hover{
 color:aqua;
 }
+
+.carousel-inner img {
+    	width: 100%;
+    	height: 100%;
+  		}
 /*--contactsection--*/
 
 #contactimg {
