--- a/ownwebsite/contact/templates/interests.html
+++ b/ownwebsite/contact/templates/interests.html
@@ -79,14 +79,42 @@
         <div class="flip-box-inner">
           <div class="flip-box-front-f"><i class="fas fa-2x fa-images"></i></div>
           <div class="flip-box-back">
-            <div class="container">
-              <div class="row">
-                <div class="col-12">Public Gallery</div>
-              </div>
-              <div class="row">
-                <div class="col-12">Public Gallery</div>
-              </div>
-            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
+						<ol class="carousel-indicators">
+							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+							<img class="d-block" src="{% static 'images/a.jpg' %}" alt="First slide" width="350px" height="200px">
+							</div>
+							<div class="carousel-item">
+							<img class="d-block" src="{% static 'images/b.jpg' %}" alt="Second slide" width="350px" height="200px">
+							</div>
+							<div class="carousel-item">
+							<img class="d-block" src="{% static 'images/c.jpg' %}" alt="Third slide" width="350px" height="200px">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/d.jpg' %}" alt="Third slide" width="350px" height="200px">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/e.jpg' %}" alt="Third slide" width="350px" height="200px">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/f.jpg' %}" alt="Third slide" width="350px" height="200px">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/g.jpg' %}" alt="Third slide" width="350px" height="200px">
+							</div>
+						</div>
+
+					</div>
           </div>
         </div>
       </div>
