--- a/ownwebsite/contact/templates/interests.html
+++ b/ownwebsite/contact/templates/interests.html
@@ -20,9 +20,19 @@
           <div class="flip-box-back">
             <div class="container">
               <div class="row">
-                <div class="col-4">Projects</div>
-                <div class="col-4">Ongoing Work</div>
-                <div class="col-4">Academics</div>
+                <div class="col-4"><h4>Projects</h4>
+                  <ul><li><a href="https://github.com/Suraj3579/codeforces_crawler" target="_blank">Codeforces Crawler</a></li></ul>
+                  <ul><li><a href="https://github.com/Suraj3579/digitalWatch" target="_blank">Digital Stopwatch</a></li></ul>
+                  <ul><li><a href="https://github.com/Suraj3579/Earthquake_App" target="_blank">Earthquake APP</a></li></ul>
+                  <ul><li><a href="https://github.com/Suraj3579/Miwok App" target="_blank">Miwok Translation APP</a></li></ul>
+                </div>
+                <div class="col-4"><h4>Ongoing</h4>
+                  <ul><li><a href="https://github.com/Suraj3579/chat_app" target="_blank">Chatting APP</a></li></ul></div>
+                <div class="col-4"><h4>Other Work</h4>
+                  <ul><li><a>Codeforces Crawler</a></li></ul>
+                  <ul><li><a>Digital Stopwatch</a></li></ul>
+                  <ul><li><a>Earthquake APP</a></li></ul>
+                  <ul><li><a>Miwok Translation APP</a></li></ul></div>
               </div>
             </div>
           </div>
@@ -34,19 +44,19 @@
           <div class="flip-box-back">
             <div class="container">
               <div class="row">
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/epl.png' %}" alt=""></a></div>
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/fa1.png' %}" alt=""></a></div>
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/ucl.svg' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.premierleague.com/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/epl.png' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.thefa.com/competitions/thefacup" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/fa1.png' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.uefa.com/uefachampionsleague/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/ucl.svg' %}" alt=""></a></div>
               </div>
               <div class="row">
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/br.png' %}" alt=""></a></div>
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/manu.png' %}" alt=""></a></div>
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/fpl.jpeg' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://bleacherreport.com/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/br.png' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.manutd.com/en" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/manu.png' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://fantasy.premierleague.com/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/fpl.jpeg' %}" alt=""></a></div>
               </div>
               <div class="row">
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/atp.jpg' %}" alt=""></a></div>
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/f1.jpg' %}" alt=""></a></div>
-                <div class="col-4"><a href="https://www.premierleague.com/"><img style="height:100px; width:100px;" src="{% static 'images/ipl.jpeg' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.atptour.com/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/atp.jpg' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.formula1.com/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/f1.jpg' %}" alt=""></a></div>
+                <div class="col-4"><a href="https://www.iplt20.com/" target="_blank"><img style="height:100px; width:100px;" src="{% static 'images/ipl.jpeg' %}" alt=""></a></div>
               </div>
             </div>
           </div>
@@ -59,8 +69,8 @@
             <div class="container">
               <div class="row">
                 <div class="col-3"><a>Daily Time Table</a></div>
-                <div class="col-3"><a>Contests Time Table</a></div>
-                <div class="col-3"><a>Classes Time Table</a></div>
+                <div class="col-3"><a>Important Dates</a></div>
+                <div class="col-3"><a href="https://drive.google.com/file/d/1IzAJ0p3yC39lzPW5YHfWEi0N774l_DwK/view?usp=sharing" target="_blank">Classes Time Table</a></div>
                 <div class="col-3"><a>Weekends Time Table</a></div>
               </div>
             </div>
@@ -89,28 +99,55 @@
                           <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                           <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                           <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+
 						</ol>
 						<div class="carousel-inner">
 							<div class="carousel-item active">
-							<img class="d-block" src="{% static 'images/a.jpg' %}" alt="First slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/a.jpg' %}" alt="First slide" style="width:350px; height:200px;">
 							</div>
 							<div class="carousel-item">
-							<img class="d-block" src="{% static 'images/b.jpg' %}" alt="Second slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/b.jpg' %}" alt="Second slide" style="width:350px; height:200px;">
 							</div>
 							<div class="carousel-item">
-							<img class="d-block" src="{% static 'images/c.jpg' %}" alt="Third slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/c.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
 							</div>
                           <div class="carousel-item">
-							<img class="d-block" src="{% static 'images/d.jpg' %}" alt="Third slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/d.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
 							</div>
                           <div class="carousel-item">
-							<img class="d-block" src="{% static 'images/e.jpg' %}" alt="Third slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/e.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
 							</div>
                           <div class="carousel-item">
-							<img class="d-block" src="{% static 'images/f.jpg' %}" alt="Third slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/f.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
 							</div>
                           <div class="carousel-item">
-							<img class="d-block" src="{% static 'images/g.jpg' %}" alt="Third slide" width="350px" height="200px">
+							<img class="d-block" src="{% static 'images/g.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/h.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/i.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/j.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/k.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/l.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/m.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
+							</div>
+                          <div class="carousel-item">
+							<img class="d-block" src="{% static 'images/n.jpg' %}" alt="Third slide" style="width:350px; height:200px;">
 							</div>
 						</div>
 
@@ -138,9 +175,9 @@
           <div class="flip-box-back">
             <div class="container">
               <div class="row">
-                <div class="col-4"><a>Coursera Certificates</a></div>
-                <div class="col-4"><a>Extracurricular Certificates</a></div>
-                <div class="col-4"><a>Personal Certificates</a></div>
+                <div class="col-6"><a href="https://drive.google.com/drive/folders/1JW8wVbFDRNrqmFJrbkUhPW97Z8qRkWbr?usp=sharing" target="_blank">Coursera Certificates</a></div>
+                <div class="col-6"><a href="https://drive.google.com/drive/folders/1qYKdK6ayx5Ga8SoNfUCRdGiGTGpWS-n5?usp=sharing" target="_blank">Extracurricular Certificates</a></div>
+
               </div>
             </div>
           </div>
