--- a/ownwebsite/contact/templates/interests.html
+++ b/ownwebsite/contact/templates/interests.html
@@ -10,7 +10,13 @@
         <div class="flip-box-inner">
           <div class="flip-box-front-a"><i class="fas fa-2x fa-bookmark"></i></div>
           <div class="flip-box-back">
-            <h2>Back Side</h2>
+            <div class="container">
+              <div class="row">
+                <div class="col-4"><a href="https://drive.google.com/file/d/1UvY_-_FEZUCpM3adhi4AvVyaMI8WCJp3/view?usp=sharing" target="_blank">Books</a></div>
+                <div class="col-4"><a href="https://drive.google.com/file/d/1zQHBcSPp17GdnNFJXi0TrVvCzDsq3iIp/view?usp=sharing" target="_blank">Animes</a></div>
+                <div class="col-4"><a href="https://drive.google.com/file/d/1nneT1SYimLkTmiB6zTm0ANhEFfYPGvnJ/view?usp=sharing" target="_blank">TV Series</a></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -28,11 +34,11 @@
                 </div>
                 <div class="col-4"><h4>Ongoing</h4>
                   <ul><li><a href="https://github.com/Suraj3579/chat_app" target="_blank">Chatting APP</a></li></ul></div>
-                <div class="col-4"><h4>Other Work</h4>
-                  <ul><li><a>Codeforces Crawler</a></li></ul>
-                  <ul><li><a>Digital Stopwatch</a></li></ul>
-                  <ul><li><a>Earthquake APP</a></li></ul>
-                  <ul><li><a>Miwok Translation APP</a></li></ul></div>
+                <div class="col-4"><h4>Study Materials</h4>
+                  <ul><li><a>MOOC</a></li></ul>
+                  <ul><li><a>Notes</a></li></ul>
+                  <ul><li><a>Assignments</a></li></ul>
+                  <ul><li><a>Extra</a></li></ul></div>
               </div>
             </div>
           </div>
@@ -161,9 +167,8 @@
           <div class="flip-box-back">
             <div class="container">
               <div class="row">
-                <div class="col-4"><a>Songs i listen to!!</a></div>
-                <div class="col-4"><a>Video Resources</a></div>
-                <div class="col-4"><a>My Extra Talent xD</a></div>
+                <div class="col-6"><a>Songs</a></div>
+                <div class="col-6"><a>My Extra Talent xD</a></div>
               </div>
             </div>
           </div>
